<resources>
    <string name="app_name">My Application</string>
    <string name="calculator">Calculator</string>
    <string name="AC">AC</string>
    <string name="change_sign">+/-</string>
    <string name="divide">÷</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="percent">%</string>
    <string name="multiply">X</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="calc_button_0">0</string>
    <string name="calc_button_1">1</string>
    <string name="calc_button_2">2</string>
    <string name="calc_button_3">3</string>
    <string name="calc_button_4">4</string>
    <string name="calc_button_5">5</string>
    <string name="calc_button_6">6</string>
    <string name="calc_button_7">7</string>
    <string name="calc_button_8">8</string>
    <string name="calc_button_9">9</string>

</resources>